[gd_scene load_steps=8 format=2]

[ext_resource path="res://Nodes/effect_node.tscn" type="PackedScene" id=1]
[ext_resource path="res://Nodes/Quantization.gd" type="Script" id=2]
[ext_resource path="res://effects/quantization.tres" type="Material" id=3]
[ext_resource path="res://SliderEdit.tscn" type="PackedScene" id=4]
[ext_resource path="res://folder.png" type="Texture" id=5]
[ext_resource path="res://disk.png" type="Texture" id=6]
[ext_resource path="res://main_theme.tres" type="Theme" id=7]

[node name="Palette Map" index="0" instance=ExtResource( 1 )]
margin_right = 554.0
margin_bottom = 309.0
size_flags_horizontal = 3
size_flags_vertical = 3
title = "Palette Map"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 0, 0.694118, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 0.172549, 1, 0, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color( 1, 1, 1, 1 )
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color( 1, 1, 1, 1 )
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color( 1, 1, 1, 1 )
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color( 1, 1, 1, 1 )
slot/5/left_enabled = false
slot/5/left_type = 0
slot/5/left_color = Color( 1, 1, 1, 1 )
slot/5/right_enabled = false
slot/5/right_type = 0
slot/5/right_color = Color( 1, 1, 1, 1 )
slot/6/left_enabled = false
slot/6/left_type = 0
slot/6/left_color = Color( 1, 1, 1, 1 )
slot/6/right_enabled = false
slot/6/right_type = 0
slot/6/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "0", "Rect", "Script", "Size Flags", "Slot" ]

[node name="Viewport" parent="." index="0"]
render_target_update_mode = 3
_sections_unfolded = [ "Render Target", "Rendering", "world" ]

[node name="TextureRect" parent="Viewport" index="0"]
material = ExtResource( 3 )
stretch_mode = 3
_sections_unfolded = [ "Margin", "Material", "Rect", "Script", "Visibility", "texture" ]

[node name="Space" type="Container" parent="." index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 24.0
margin_right = 323.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 10 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="GridContainer" type="GridContainer" parent="." index="2"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 34.0
margin_right = 323.0
margin_bottom = 66.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
columns = 2

[node name="Label" type="Label" parent="GridContainer" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 103.0
margin_bottom = 14.0
rect_min_size = Vector2( 64, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Dithering"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="DitherSlider" parent="GridContainer" index="1" instance=ExtResource( 4 )]
margin_left = 107.0
margin_right = 307.0
margin_bottom = 14.0
rect_min_size = Vector2( 128, 0 )
size_flags_horizontal = 3
_sections_unfolded = [ "Rect", "Size Flags" ]
max_value = 0.5
value = 0.1
step_value = 0.01

[node name="Label2" type="Label" parent="GridContainer" index="2"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 103.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Alpha Threshold"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="AlphaSlider" parent="GridContainer" index="3" instance=ExtResource( 4 )]
margin_left = 107.0
margin_top = 18.0
margin_right = 307.0
margin_bottom = 32.0
rect_min_size = Vector2( 128, 0 )
size_flags_horizontal = 3
_sections_unfolded = [ "Grow Direction", "Rect", "Size Flags" ]
min_value = 0.01
max_value = 1.0
value = 0.5
step_value = 0.01

[node name="Space2" type="Container" parent="." index="3"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 67.0
margin_right = 323.0
margin_bottom = 77.0
rect_min_size = Vector2( 0, 10 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="Label" type="Label" parent="." index="4"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 78.0
margin_right = 323.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Colour Palette"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Space3" type="Container" parent="." index="5"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 93.0
margin_right = 323.0
margin_bottom = 103.0
rect_min_size = Vector2( 0, 10 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="HBoxContainer" type="HBoxContainer" parent="." index="6"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 104.0
margin_right = 323.0
margin_bottom = 126.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Label" type="Label" parent="HBoxContainer" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 4.0
margin_right = 41.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Preset"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Presets" type="OptionButton" parent="HBoxContainer" index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 45.0
margin_right = 120.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
text = "None"
flat = false
align = 0
items = [ "None", null, false, -1, null ]
selected = 0

[node name="Container" type="Container" parent="HBoxContainer" index="2"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 124.0
margin_right = 132.0
margin_bottom = 22.0
rect_min_size = Vector2( 8, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="LoadButton" type="Button" parent="HBoxContainer" index="3"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 136.0
margin_right = 164.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 5 )
flat = false
align = 1

[node name="SaveButton" type="Button" parent="HBoxContainer" index="4"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 168.0
margin_right = 196.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 6 )
flat = false
align = 1

[node name="PanelContainer" type="PanelContainer" parent="." index="7"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 127.0
margin_right = 323.0
margin_bottom = 161.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
_sections_unfolded = [ "Hint", "Size Flags" ]

[node name="Palette" type="GridContainer" parent="PanelContainer" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 300.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 12
_sections_unfolded = [ "Size Flags" ]

[node name="AddButton" type="Button" parent="PanelContainer/Palette" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 16, 6 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "+"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="CanvasLayer" type="CanvasLayer" parent="." index="8"]
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="FileDialog" type="FileDialog" parent="CanvasLayer" index="0"]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 590.0
margin_bottom = 349.0
rect_min_size = Vector2( 200, 70 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 7 )
popup_exclusive = false
window_title = "Open a File"
resizable = true
dialog_hide_on_ok = false
mode_overrides_title = true
mode = 0
access = 2
filters = PoolStringArray(  )
show_hidden_files = false
current_dir = "C:/godot3/BlastFX"
current_file = ""
current_path = "C:/godot3/BlastFX/"
_sections_unfolded = [ "Mouse", "Popup", "Theme" ]

[connection signal="value_changed" from="GridContainer/DitherSlider" to="." method="_on_DitherSlider_value_changed"]
[connection signal="value_changing" from="GridContainer/DitherSlider" to="." method="_on_DitherSlider_value_changing"]
[connection signal="value_changed" from="GridContainer/AlphaSlider" to="." method="_on_AlphaSlider_value_changed"]
[connection signal="value_changing" from="GridContainer/AlphaSlider" to="." method="_on_AlphaSlider_value_changing"]
[connection signal="item_selected" from="HBoxContainer/Presets" to="." method="_on_Presets_item_selected"]
[connection signal="pressed" from="HBoxContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="HBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="PanelContainer/Palette/AddButton" to="." method="_on_AddButton_pressed"]
[connection signal="file_selected" from="CanvasLayer/FileDialog" to="." method="_on_FileDialog_file_selected"]
